# Tracker

./: .dockerignore  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.github/: cd  test  todo
.github/workflows/: ci  ci.old  ci.yml  ci_test.yml  deploy  flake8
backend/: .env_example  Habit_fixture.json  dump.rdb  pyproject.toml  tel.py
backend/config/: permissions.py  settings.py  urls.py
backend/docker/celery/beat/: start
backend/docker/celery/worker/: start
backend/docker/django/: Dockerfile  start
backend/habit_tracker/: admin.py  models.py  serializer.py  task.py  tasks.py  test_fixture.py  tests.py  urls.py  validators.py  views.py
backend/habit_tracker/migrations/: 0001_initial.py  0002_alter_habit_related.py  0002_initial.py  0003_rename_pablic_habit_public_alter_habit_related.py  0004_remove_habit_day_action.py  0005_alter_habit_time.py  0006_habit_day_action.py  0007_remove_habit_day_action_alter_habit_period.py  0008_alter_habit_period.py
backend/telegram_bot/: services.py
backend/telegram_bot/management/commands/: telega.py
backend/users/: admin.py  models.py  serializer.py  urls.py  views.py
backend/users/management/commands/: add_user.py
backend/users/migrations/: 0001_initial.py  0002_alter_customuser_api_telegram_and_more.py  0003_alter_customuser_api_telegram.py  0004_remove_customuser_api_telegram_and_more.py  0005_customuser_chat_id_telegram.py
config/: settings.py
data_test/: Habit_fixture.json
docker_app/: .env_example  Dockerfile  docker-compose.yaml
redisdata/: dump.rdb
